[gd_scene load_steps=27 format=2]

[ext_resource path="res://Effects/entity_effects/entity_effects.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/player/player.gd" type="Script" id=2]
[ext_resource path="res://Components/hurtbox/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/stats/stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/player_controlled/playerControlled.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/sprite/entity_sprite.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/health_bar/health_bar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/entity_push/entity_push.tscn" type="PackedScene" id=8]
[ext_resource path="res://Entities/player/MainCharacter_SHEAT.png" type="Texture" id=9]
[ext_resource path="res://Components/sound_player/foot_stepper/foot_stepper.tscn" type="PackedScene" id=11]
[ext_resource path="res://Entities/damage.wav" type="AudioStream" id=12]
[ext_resource path="res://Entities/Attacks/Melee/slash/sword_tint.wav" type="AudioStream" id=13]
[ext_resource path="res://Entities/player/player_death/player_death.tscn" type="PackedScene" id=14]
[ext_resource path="res://Components/held_item/held_item.tscn" type="PackedScene" id=16]
[ext_resource path="res://Effects/dash_effect/dash_effect.tscn" type="PackedScene" id=17]

[sub_resource type="ShaderMaterial" id=8]

[sub_resource type="CircleShape2D" id=2]
radius = 6.03636

[sub_resource type="CircleShape2D" id=3]
radius = 5.0

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="Animation" id=5]
resource_name = "dash"
length = 0.35
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 0.85 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("foot_stepper")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "footstep"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "dash_back"
length = 0.35
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 0.85 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("foot_stepper")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "footstep"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("foot_stepper")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "footstep"
}, {
"args": [  ],
"method": "footstep"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "run_back"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("foot_stepper")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "footstep"
}, {
"args": [  ],
"method": "footstep"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "run_front"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("foot_stepper")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "footstep"
}, {
"args": [  ],
"method": "footstep"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "stand"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "stand_back"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="player" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource( 2 )
truName = "player"
faction = "player"
dash_effect = ExtResource( 17 )
player_death = ExtResource( 14 )
dash_strength = 170

[node name="stats" parent="." instance=ExtResource( 4 )]
MAX_HEALTH = 5
HEALTH = 5
DAMAGE = 0

[node name="sprite" parent="." instance=ExtResource( 6 )]
material = SubResource( 8 )
position = Vector2( -1, -3 )
scale = Vector2( 1.05, 0.95 )
texture = ExtResource( 9 )
hframes = 7
vframes = 5
frame = 1
auto_flip_mode = 0

[node name="playerControlled" parent="." instance=ExtResource( 5 )]

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
HURT_SOUND = ExtResource( 12 )
BLOCK_SOUND = ExtResource( 13 )

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 3 )

[node name="healthBar" parent="." instance=ExtResource( 7 )]
margin_left = -10.2072
margin_top = -12.2674
margin_right = 10.7928
margin_bottom = -8.26565

[node name="entityPush" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="entityPush" index="0"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dash = SubResource( 5 )
anims/dash_back = SubResource( 12 )
anims/run = SubResource( 6 )
anims/run_back = SubResource( 9 )
anims/run_front = SubResource( 13 )
anims/stand = SubResource( 11 )
anims/stand_back = SubResource( 10 )

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="held_item" parent="." instance=ExtResource( 16 )]

[node name="foot_stepper" parent="." instance=ExtResource( 11 )]
RATE = 0.0
OFFSET = 0.0
CONSTANT_RATE = true
VOLUME_ADJUST = 0.0

[node name="entity_effects" parent="." instance=ExtResource( 1 )]
death_effect = false

[node name="damage_pause_cooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="tree_entered" from="." to="." method="_on_player_tree_entered"]
[connection signal="health_changed" from="stats" to="." method="_on_stats_health_changed"]
[connection signal="got_hit" from="hurtbox" to="." method="_on_hurtbox_got_hit"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="damage_pause_cooldown" to="." method="_on_damge_pause_cooldown_timeout"]

[editable path="hurtbox"]
[editable path="entityPush"]
[editable path="held_item"]
